--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -13,7 +13,7 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["../../packages/ui/src/*"]  // ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
